Enhance project layout and styling
- Updated Twitch.css to improve embed responsiveness.
- Refactored project.html for better structure and added countdown functionality.
- Enhanced sb-extension's.html with new extension cards and improved layout.
- Modified countdown.js to change countdown date and update display element.
- Adjusted streaming.html to correct class names for player section.
- Cleaned up style.css by removing unused styles and added new Countdown.css for coming soon page.
- Introduced Extension's.css for styling streamer.bot extensions with responsive design and hover effects.

--- a/streaming.html
+++ b/streaming.html
@@ -43,7 +43,7 @@
     <p id="live-game">Playing: Loading...</p>
   </div>
 
-  <div class="stream-player">
+   <div class="Player">
     <script src="https://embed.twitch.tv/embed/v1.js"></script>
     <script>
       new Twitch.Embed("twitch-embed", {
