--- a/about.html
+++ b/about.html
@@ -38,109 +38,117 @@
         </section>
         <section class="about">
             <p>
-            Hi! I'm <strong>Hypekingfish</strong> (aka FishnBuckJr), an avid PC gamer and programming enthusiast.
-            When I'm not coding or gaming, you can find me flying in Microsoft Flight Simulator.
+                Hi! I'm <strong>Hypekingfish</strong> (aka FishnBuckJr), an avid PC gamer and programming enthusiast.
+                When I'm not coding or gaming, you can find me flying in Microsoft Flight Simulator.
             </p>
             <div class="about-columns">
-            <div>
-                <h3>Skills & Interests</h3>
+                <div>
+                    <h3>Skills & Interests</h3>
+                    <ul>
+                        <li><strong>Programming:</strong> Python, HTML, CSS, JavaScript</li>
+                        <li><strong>Gaming:</strong> Flight Simulators, Minecraft, Factorio, and more!</li>
+                        <li><strong>Flight Simulation:</strong> 1,500+ hours in MSFS, flown nearly every aircraft.</li>
+                        <li><strong>Content Creation:</strong> 4.5+ years of video editing, streaming, and more!</li>
+                        <li><strong>Community:</strong> Active member of several online sim and dev communities</li>
+                    </ul>
+                </div>
+                <div>
+                    <h3>Current Projects</h3>
+                    <ul>
+                        <li>Personal Website Development</li>
+                        <li>Flight Sim Content Creation</li>
+                        <li>Programming Projects (<a href="project.html">see Projects page</a>)</li>
+                        <li>Open-source tools for simmers and streamers</li>
+                    </ul>
+                    <h3>Fun Facts</h3>
+                    <ul>
+                        <li><strong>Favorite Aircraft:</strong> Boeing 737-800</li>
+                        <li><strong>Most Hours in Game:</strong> MSFS 2020 (1,500+)</li>
+                        <li><strong>Favorite Programming Snack:</strong> Sour gummy worms</li>
+                        <li><strong>Dream Destination:</strong> Tokyo, Japan</li>
+                        <li><strong>Favorite IDE:</strong> Visual Studio Code</li>
+                        <li><strong>Favorite Coding Music:</strong> Lo-fi beats & synthwave</li>
+                    </ul>
+                </div>
+            </div>
+            <div class="about-extra">
+                <h3>Why "Hypekingfish"?</h3>
+                <p>
+                    The name "Hypekingfish" is a blend of my love for energetic gaming sessions and my long-time
+                    nickname "Fish". Whether I'm streaming, coding, or flying, I always try to bring positive vibes and
+                    a bit of fun to everything I do!
+                </p>
+            </div>
+            <div class="about-extra">
+                <h3>My Setup</h3>
                 <ul>
-                <li><strong>Programming:</strong> Python, HTML, CSS, JavaScript</li>
-                <li><strong>Gaming:</strong> Flight Simulators, Minecraft, Factorio, and more!</li>
-                <li><strong>Flight Simulation:</strong> 1,500+ hours in MSFS, flown nearly every aircraft.</li>
-                <li><strong>Content Creation:</strong> 4.5+ years of video editing, streaming, and more!</li>
-                <li><strong>Community:</strong> Active member of several online sim and dev communities</li>
+                    <li><strong>PC Specs:</strong> Ryzen 7 CPU, RTX 3070, 32GB RAM</li>
+                    <li><strong>Flight Controls:</strong> Honeycomb Alpha & Bravo, Thrustmaster TPR pedals</li>
+                    <li><strong>Streaming Gear:</strong> Elgato Stream Deck, Blue Yeti mic, dual monitors</li>
                 </ul>
             </div>
-            <div>
-                <h3>Current Projects</h3>
+            <div class="about-extra">
+                <h3>Let's Connect!</h3>
+                <p>
+                    I love meeting new people who share my interests. Feel free to reach out via <a
+                        href="mailto:hypekingfishttv@gmail.com">email</a> or connect on <a
+                        href="https://discord.gg/yourdiscord" target="_blank">Discord</a>!
+                </p>
+            </div>
+            <div class="about-extra">
+                <h3>Achievements</h3>
                 <ul>
-                <li>Personal Website Development</li>
-                <li>Flight Sim Content Creation</li>
-                <li>Programming Projects (<a href="project.html">see Projects page</a>)</li>
-                <li>Open-source tools for simmers and streamers</li>
+                    <li><strong>VATSIM Certified Controller</strong> – Helped manage virtual airspace for hundreds of
+                        pilots.</li>
+                    <li><strong>Top 1% in MSFS Flight Hours</strong> – Logged over 1,500 hours in Microsoft Flight
+                        Simulator.</li>
+                    <li><strong>Community Contributor</strong> – Developed open-source mods and tools for the sim
+                        community.</li>
+                    <li><strong>Featured Streamer</strong> – Highlighted on Twitch for aviation and simulation content.
+                    </li>
                 </ul>
-                <h3>Fun Facts</h3>
+            </div>
+            <div class="about-extra">
+                <h3>What I'm Learning</h3>
                 <ul>
-                <li><strong>Favorite Aircraft:</strong> Boeing 737-800</li>
-                <li><strong>Most Hours in Game:</strong> MSFS 2020 (1,500+)</li>
-                <li><strong>Favorite Programming Snack:</strong> Sour gummy worms</li>
-                <li><strong>Dream Destination:</strong> Tokyo, Japan</li>
-                <li><strong>Favorite IDE:</strong> Visual Studio Code</li>
-                <li><strong>Favorite Coding Music:</strong> Lo-fi beats & synthwave</li>
+                    <li>TypeScript and React for modern web development</li>
+                    <li>Advanced flight planning and real-world aviation procedures</li>
+                    <li>Video production and motion graphics</li>
+                    <li>Cloud computing and serverless architecture</li>
                 </ul>
-            </div>
-            </div>
-            <div class="about-extra">
-            <h3>Why "Hypekingfish"?</h3>
-            <p>
-                The name "Hypekingfish" is a blend of my love for energetic gaming sessions and my long-time nickname "Fish". Whether I'm streaming, coding, or flying, I always try to bring positive vibes and a bit of fun to everything I do!
-            </p>
-            </div>
-            <div class="about-extra">
-            <h3>My Setup</h3>
-            <ul>
-                <li><strong>PC Specs:</strong> Ryzen 7 CPU, RTX 3070, 32GB RAM</li>
-                <li><strong>Flight Controls:</strong> Honeycomb Alpha & Bravo, Thrustmaster TPR pedals</li>
-                <li><strong>Streaming Gear:</strong> Elgato Stream Deck, Blue Yeti mic, dual monitors</li>
-            </ul>
-            </div>
-            <div class="about-extra">
-            <h3>Let's Connect!</h3>
-            <p>
-                I love meeting new people who share my interests. Feel free to reach out via <a href="mailto:hypekingfishttv@gmail.com">email</a> or connect on <a href="https://discord.gg/yourdiscord" target="_blank">Discord</a>!
-            </p>
-            </div>
-            <div class="about-extra">
-            <h3>Achievements</h3>
-            <ul>
-                <li><strong>VATSIM Certified Controller</strong> – Helped manage virtual airspace for hundreds of pilots.</li>
-                <li><strong>Top 1% in MSFS Flight Hours</strong> – Logged over 1,500 hours in Microsoft Flight Simulator.</li>
-                <li><strong>Community Contributor</strong> – Developed open-source mods and tools for the sim community.</li>
-                <li><strong>Featured Streamer</strong> – Highlighted on Twitch for aviation and simulation content.</li>
-            </ul>
-            </div>
-            <div class="about-extra">
-            <h3>What I'm Learning</h3>
-            <ul>
-                <li>TypeScript and React for modern web development</li>
-                <li>Advanced flight planning and real-world aviation procedures</li>
-                <li>Video production and motion graphics</li>
-                <li>Cloud computing and serverless architecture</li>
-            </ul>
             </div>
             <div class="about-membership">
-            <h3>Memberships & Affiliations</h3>
-            <div class="membership-list">
-                <div class="membership-card">
-                <img src="img/vatsim_logo.png" alt="VATSIM Logo" />
-                <div>
-                    <strong>VATSIM Member</strong>
-                    <p>Active virtual pilot and controller since 2019.</p>
+                <h3>Memberships & Affiliations</h3>
+                <div class="membership-list">
+                    <div class="membership-card">
+                        <img src="img/vatsim_logo.png" alt="VATSIM Logo" />
+                        <div>
+                            <strong>VATSIM Member</strong>
+                            <p>Active virtual pilot and controller since 2019.</p>
+                        </div>
+                    </div>
+                    <div class="membership-card">
+                        <img src="img/twitch_logo.png" alt="Twitch Logo" />
+                        <div>
+                            <strong>Twitch Affiliate</strong>
+                            <p>Streaming aviation and gaming content regularly.</p>
+                        </div>
+                    </div>
+                    <div class="membership-card">
+                        <img src="img/github_logo.png" alt="GitHub Logo" />
+                        <div>
+                            <strong>Open Source Contributor</strong>
+                            <p>Sharing code and collaborating on community projects.</p>
+                        </div>
+                    </div>
+                    <div class="membership-card">
+                        <img src="img/youtube_logo.png" alt="YouTube Logo" />
+                        <div>
+                            <strong>YouTube Creator</strong>
+                            <p>Producing tutorials and flight sim videos.</p>
+                        </div>
+                    </div>
                 </div>
-                </div>
-                <div class="membership-card">
-                <img src="img/twitch_logo.png" alt="Twitch Logo" />
-                <div>
-                    <strong>Twitch Affiliate</strong>
-                    <p>Streaming aviation and gaming content regularly.</p>
-                </div>
-                </div>
-                <div class="membership-card">
-                <img src="img/github_logo.png" alt="GitHub Logo" />
-                <div>
-                    <strong>Open Source Contributor</strong>
-                    <p>Sharing code and collaborating on community projects.</p>
-                </div>
-                </div>
-                <div class="membership-card">
-                <img src="img/youtube_logo.png" alt="YouTube Logo" />
-                <div>
-                    <strong>YouTube Creator</strong>
-                    <p>Producing tutorials and flight sim videos.</p>
-                </div>
-                </div>
-            </div>
             </div>
         </section>
         </section>
