--- a/project.html
+++ b/project.html
@@ -1,140 +1,107 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link href="https://fonts.googleapis.com/css2?family=EB+Garamond:ital,wght@0,400..800;1,400..800&family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet"/>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"/>
-    <title>Hypekingfish</title>
-    <link href="style.css" rel="stylesheet" />
-    <link href="css/Footer.css" rel="stylesheet" />
-    <link href="css/Nav.css" rel="stylesheet" />\
-    <link href="css/Visitors.css" rel="stylesheet" />
-    <link rel="icon" type="image/x-icon" href="/img/FnBLogo_FINAL_800.png" />
-    <script
-      src="https://kit.fontawesome.com/f78443c527.js"
-      crossorigin="anonymous"
-    ></script>
-  </head>
-  <body>
-    <div class="topnav">
-      <a href="index.html" class="active"><img src="img/FnBLogo_FINAL_800.png"/>Hypekingfish</a>
-      <div id="myLinks">
-        <a href="about.html">About</a>
-        <a href="flying.html">Flying</a>
-        <a href="project.html">Projects</a>
-        <a href="streaming.html">Streaming</a>
-      </div>
-      <a href="javascript:void(0);" class="topnav-icon" onclick="myFunction()">
-        <i class="fa fa-bars"></i>
-      </a>
+
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <link rel="preconnect" href="https://fonts.googleapis.com" />
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+  <link
+    href="https://fonts.googleapis.com/css2?family=EB+Garamond:ital,wght@0,400..800;1,400..800&family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap"
+    rel="stylesheet" />
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" />
+  <title>Hypekingfish</title>
+  <link href="style.css" rel="stylesheet" />
+  <link rel="stylesheet" href="css/Countdown.css" />
+  <link href="css/Footer.css" rel="stylesheet" />
+  <link href="css/Nav.css" rel="stylesheet" />
+  <link href="css/Visitors.css" rel="stylesheet" />
+  <link rel="icon" type="image/x-icon" href="/img/FnBLogo_FINAL_800.png" />
+  <script src="https://kit.fontawesome.com/f78443c527.js" crossorigin="anonymous"></script>
+</head>
+
+<body>
+  <div class="topnav">
+    <a href="index.html" class="active"><img src="img/FnBLogo_FINAL_800.png" />Hypekingfish</a>
+    <div id="myLinks">
+      <a href="about.html">About</a>
+      <a href="flying.html">Flying</a>
+      <a href="project.html">Projects</a>
+      <a href="streaming.html">Streaming</a>
     </div>
-    <div class="bgimg">
-      <div class="topleft">
-      <img src="img/FnBLogo_FINAL_800.png" alt="Hypekingfish Logo" style="height:40px;">
-      <p style="margin-top:8px;font-weight:bold;">Hypekingfish Projects</p>
-      </div>
-      <div class="middle">
+    <a href="javascript:void(0);" class="topnav-icon" onclick="myFunction()">
+      <i class="fa fa-bars"></i>
+    </a>
+  </div>
+  <div class="bgimg">
+    <div class="middle">
       <h1>COMING SOON</h1>
       <hr />
-      <p id="demo"></p>
+      <p id="Timer"></p>
       <p style="margin-top:24px;">
         We're working on something exciting!<br>
         This page will showcase our latest projects, including:<br>
-        <ul style="text-align:left; display:inline-block; margin-top:12px;">
+      <ul style="text-align:left; display:inline-block; margin-top:12px;">
         <li>Flight Sim Add-ons &amp; Tools</li>
         <li>Streaming Resources</li>
         <li>Open Source Utilities</li>
         <li>Community Events</li>
-        </ul>
-        Stay tuned for updates and sneak peeks.<br>
-        For inquiries or collaborations, <a href="about.html#contact">contact us</a>.
+      </ul>
+      Stay tuned for updates and sneak peeks.<br>
+      For inquiries or collaborations, <a href="about.html#contact">contact us</a>.
       </p>
-      </div>
-      <div class="bottomleft">
+    </div>
+    <div class="bottomleft">
       <p>
         <strong>Follow us:</strong>
         <a href="https://twitter.com/hypekingfish" target="_blank"><i class="fa fa-twitter"></i></a>
         <a href="https://github.com/hypekingfish" target="_blank"><i class="fa fa-github"></i></a>
         <a href="https://twitch.tv/hypekingfish" target="_blank"><i class="fa fa-twitch"></i></a>
       </p>
-      <p style="margin-top:8px;"></span>Last updated: June <span id="year"></p>
-      </div>
+      <p style="margin-top:8px;"></span>Last updated: <span id="last-updated">2024-06-09</span></p>
     </div>
-    <footer class="site-footer">
-      <div class="footer-content">
-        <div class="footer-branding">
-          <img
-            src="img/Progress_Pride_Flag.png"
-            alt="Progress Pride Flag"
-            class="footer-flag"
-          />
-          <span class="footer-title"
-            >Created with passion by <strong>Hypekingfish</strong></span
-          >
-          <img
-            src="img/Progress_Pride_Flag.png"
-            alt="Progress Pride Flag"
-            class="footer-flag"
-          />
-        </div>
-        <div class="footer-social">
-          <a
-            href="https://github.com/[your-actual-username]"
-            aria-label="GitHub"
-            target="_blank"
-            rel="noopener noreferrer"
-          >
-            <i class="fab fa-github"></i>
-          </a>
-          <a
-            href="https://twitter.com/fishnbuckjr02"
-            aria-label="Twitter"
-            target="_blank"
-            rel="noopener noreferrer"
-          >
-            <i class="fab fa-x-twitter"></i>
-          </a>
-          <a
-            href="https://youtube.com/yourchannel"
-            aria-label="YouTube"
-            target="_blank"
-            rel="noopener noreferrer"
-          >
-            <i class="fab fa-youtube"></i>
-          </a>
-          <a
-            href="https://twitch.tv/hypekingfish"
-            aria-label="Twitch"
-            target="_blank"
-            rel="noopener noreferrer"
-          >
-            <i class="fab fa-twitch"></i>
-          </a>
-          <a
-            href="https://discord.gg/yourdiscord"
-            aria-label="Discord"
-            target="_blank"
-            rel="noopener noreferrer"
-          >
-            <i class="fab fa-discord"></i>
-          </a>
-        </div>
-        <p class="footer-copyright">
-          <small>
-            &copy; <span id="year"></span> Hypekingfish. All rights reserved.<br />
-            All content is property of Hypekingfish unless otherwise noted.
-          </small>
-        </p>
+  </div>
+  <footer class="site-footer">
+    <div class="footer-content">
+      <div class="footer-branding">
+        <img src="img/Progress_Pride_Flag.png" alt="Progress Pride Flag" class="footer-flag" />
+        <span class="footer-title">Created with passion by <strong>Hypekingfish</strong></span>
+        <img src="img/Progress_Pride_Flag.png" alt="Progress Pride Flag" class="footer-flag" />
       </div>
+      <div class="footer-social">
+        <a href="https://github.com/[your-actual-username]" aria-label="GitHub" target="_blank"
+          rel="noopener noreferrer">
+          <i class="fab fa-github"></i>
+        </a>
+        <a href="https://twitter.com/fishnbuckjr02" aria-label="Twitter" target="_blank" rel="noopener noreferrer">
+          <i class="fab fa-x-twitter"></i>
+        </a>
+        <a href="https://youtube.com/yourchannel" aria-label="YouTube" target="_blank" rel="noopener noreferrer">
+          <i class="fab fa-youtube"></i>
+        </a>
+        <a href="https://twitch.tv/hypekingfish" aria-label="Twitch" target="_blank" rel="noopener noreferrer">
+          <i class="fab fa-twitch"></i>
+        </a>
+        <a href="https://discord.gg/yourdiscord" aria-label="Discord" target="_blank" rel="noopener noreferrer">
+          <i class="fab fa-discord"></i>
+        </a>
+      </div>
+      <p class="footer-copyright">
+        <small>
+          &copy; <span id="year"></span> Hypekingfish. All rights reserved.<br />
+          All content is property of Hypekingfish unless otherwise noted.
+        </small>
+      </p>
+    </div>
     <script>
       document.getElementById("year").textContent = new Date().getFullYear();
+      document.getElementById("last-updated").textContent = document.lastModified.split(' ')[0];
     </script>
-    </footer>
-    <script src="scripts/countdown.js"></script>
-    <script src="scripts/navmenu.js"></script>
-    <script src="scripts/visitorCount.js"></script>
-  </body>
+
+  </footer>
+  <script src="scripts/countdown.js"></script>
+  <script src="scripts/navmenu.js"></script>
+  <script src="scripts/visitorCount.js"></script>
+</body>
+
 </html>
