--- a/sb-extension's.html
+++ b/sb-extension's.html
@@ -1,22 +1,27 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <meta charset="UTF-8"/>
-        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <link rel="preconnect" href="https://fonts.googleapis.com" />
-        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-        <link href="https://fonts.googleapis.com/css2?family=EB+Garamond:ital,wght@0,400..800;1,400..800&family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet"/>
-        <title>Hypekingfish</title>
-        <link href="style.css" rel="stylesheet">
-        <link href="css/Footer.css" rel="stylesheet"/>
-        <link href="css/Nav.css" rel="stylesheet"/>
-        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"/>
-        <link rel="icon" type="image/x-icon" href="/img/FnBLogo_FINAL_800.png">
-        <script src="https://kit.fontawesome.com/f78443c527.js" crossorigin="anonymous"></script>
-    </head>
-    <body>
-        <div class="topnav">
-        <a href="index.html" class="active"><img src="img/FnBLogo_FINAL_800.png"/>Hypekingfish</a>
+
+<head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+        href="https://fonts.googleapis.com/css2?family=EB+Garamond:ital,wght@0,400..800;1,400..800&family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap"
+        rel="stylesheet" />
+    <title>Hypekingfish</title>
+    <link href="style.css" rel="stylesheet">
+    <link href="css/Extension's.css" rel="stylesheet" />
+    <link href="css/Footer.css" rel="stylesheet" />
+    <link href="css/Nav.css" rel="stylesheet" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" />
+    <link rel="icon" type="image/x-icon" href="/img/FnBLogo_FINAL_800.png">
+    <script src="https://kit.fontawesome.com/f78443c527.js" crossorigin="anonymous"></script>
+</head>
+
+<body>
+    <div class="topnav">
+        <a href="index.html" class="active"><img src="img/FnBLogo_FINAL_800.png" />Hypekingfish</a>
         <div id="myLinks">
             <a href="about.html">About</a>
             <a href="flying.html">Flying</a>
@@ -26,79 +31,100 @@
         <a href="javascript:void(0);" class="topnav-icon" onclick="myFunction()">
             <i class="fa fa-bars"></i>
         </a>
+    </div>
+    <section class="sb-extensions">
+        <h2 class="section-title">Streamer.bot Extensions</h2>
+        <div class="card-container">
+            <div class="extension-card">
+                <img src="img/trivia-icon.png" alt="Trivia Extension Icon" class="extension-icon" />
+                <h3>Aviation Trivia</h3>
+                <p>Placeholder</p>
+                <a href="#" class="card-button">Learn More</a>
+            </div>
+            <div class="extension-card">
+                <img src="img/FnBLogo_FINAL_800.png" alt="Gamble Extension Icon" class="extension-icon" />
+                <h3>Timeout Gamble</h3>
+                <p>Fun chat-based gamble system with channel point support and live stats. Integrates with Discord
+                    webhooks.</p>
+                <a href="extensions/gamble.html" class="card-button">Learn More</a>
+            </div>
+            <div class="extension-card">
+                <img src="img/emoji-tetris.png" alt="Emoji Tetris Icon" class="extension-icon" />
+                <h3>Emoji Tetris</h3>
+                <p>Play Tetris in Twitch chat using emojis. Includes visual overlay, command parsing, and a high score
+                    system.</p>
+                <a href="extensions/emoji-tetris.html" class="card-button">Learn More</a>
+            </div>
+            <div class="extension-card">
+                <img src="img/streamerbot-icon.png" alt="Streamer.bot Icon" class="extension-icon" />
+                <h3>Streamer.bot Integration</h3>
+                <p>Connect your Streamer.bot instance to Twitch for advanced chat interactions, commands, and event
+                    handling.</p>
+                <a href="extensions/streamerbot.html" class="card-button">Learn More</a>
+
+            </div>
+            <!-- Add more cards as needed -->
         </div>
-        <div class="sb-extensions">
-        </div>
-        <footer class="site-footer">
-            <div class="footer-content">
-                <div class="footer-branding">
-                <img
-                    src="img/Progress_Pride_Flag.png"
-                    alt="Progress Pride Flag"
-                    class="footer-flag"
-                />
-                <span class="footer-title"
-                    >Created with passion by <strong>Hypekingfish</strong></span
-                >
-                <img
-                    src="img/Progress_Pride_Flag.png"
-                    alt="Progress Pride Flag"
-                    class="footer-flag"
-                />
-                </div>
-                <div class="footer-social">
-                <a
-                    href="https://github.com/[your-actual-username]"
-                    aria-label="GitHub"
-                    target="_blank"
-                    rel="noopener noreferrer"
-                >
+    </section>
+    <footer class="site-footer">
+        <div class="footer-content">
+            <div class="footer-branding">
+                <img src="img/Progress_Pride_Flag.png" alt="Progress Pride Flag" class="footer-flag" />
+                <span class="footer-title">Created with passion by <strong>Hypekingfish</strong></span>
+                <img src="img/Progress_Pride_Flag.png" alt="Progress Pride Flag" class="footer-flag" />
+            </div>
+            <div class="footer-social">
+                <a href="https://github.com/[your-actual-username]" aria-label="GitHub" target="_blank"
+                    rel="noopener noreferrer">
                     <i class="fab fa-github"></i>
                 </a>
-                <a
-                    href="https://twitter.com/fishnbuckjr02"
-                    aria-label="Twitter"
-                    target="_blank"
-                    rel="noopener noreferrer"
-                >
+                <a href="https://twitter.com/fishnbuckjr02" aria-label="Twitter" target="_blank"
+                    rel="noopener noreferrer">
                     <i class="fab fa-x-twitter"></i>
                 </a>
-                <a
-                    href="https://youtube.com/yourchannel"
-                    aria-label="YouTube"
-                    target="_blank"
-                    rel="noopener noreferrer"
-                >
+                <a href="https://youtube.com/yourchannel" aria-label="YouTube" target="_blank"
+                    rel="noopener noreferrer">
                     <i class="fab fa-youtube"></i>
                 </a>
-                <a
-                    href="https://twitch.tv/hypekingfish"
-                    aria-label="Twitch"
-                    target="_blank"
-                    rel="noopener noreferrer"
-                >
+                <a href="https://twitch.tv/hypekingfish" aria-label="Twitch" target="_blank" rel="noopener noreferrer">
                     <i class="fab fa-twitch"></i>
                 </a>
-                <a
-                    href="https://discord.gg/yourdiscord"
-                    aria-label="Discord"
-                    target="_blank"
-                    rel="noopener noreferrer"
-                >
+                <a href="https://discord.gg/yourdiscord" aria-label="Discord" target="_blank" rel="noopener noreferrer">
                     <i class="fab fa-discord"></i>
                 </a>
-                </div>
-                <p class="footer-copyright">
-                <small>
-                    &copy; <span id="year"></span> Hypekingfish. All rights reserved.<br />
-                    All content is property of Hypekingfish unless otherwise noted.
-                </small>
-                </p>
             </div>
-            <script>
-            document.getElementById("year").textContent = new Date().getFullYear();
-            </script>
-            </footer>
-        <script src="scripts/navmenu.js"></script>
-    </body>
+            <div class="footer-support">
+                <h4>Support the Site</h4>
+                <a href="https://www.buymeacoffee.com/Hypekingfish"><img
+                        src="https://img.buymeacoffee.com/button-api/?text=Buy me a coffee&emoji=&slug=Hypekingfish&button_colour=ffc425&font_colour=000000&font_family=Poppins&outline_colour=000000&coffee_colour=FFDD00" /></a>
+            </div>
+            <p class="footer-copyright">
+                <small>
+                    &copy; <span id="year"></span> <strong>Hypekingfish</strong> All rights reserved.<br />
+                    All content is property of Hypekingfish unless otherwise noted.<br />
+                    VATSIM, vZSE ARTCC, and all related logos are trademarks of their respective owners.<br />
+                    This site is not affiliated with or endorsed by VATSIM or any official aviation authority.<br />
+                    Images and content may not be reproduced without permission.<br />
+                    For inquiries, contact: <a
+                        href="mailto:hypekingfishttv@gmail.com">hypekingfishttv@gmail.com</a><br />
+                    Website code and design by Hypekingfish.<br />
+                    Some images and data may be used under fair use for educational or informational purposes.<br />
+                    If you believe your copyright has been infringed, please contact me for prompt removal or
+                    credit.<br />
+                    No personal data is collected or stored by this site.<br />
+                    Last updated: <span id="last-updated">2024-06-09</span>
+                </small>
+            </p>
+        </div>
+    </footer>
+    <script>
+        document.getElementById("last-updated").textContent = document.lastModified.split(' ')[0];
+    </script>
+    <script>
+        document.getElementById("year").textContent = new Date().getFullYear();
+    </script>
+    </footer>
+    <script src="scripts/navmenu.js"></script>
+</body>
+
 </html>
