Refactor CSS for improved button styling and add scroll-to-top functionality; create Scroll.css for button styles; update HTML to include button and link new stylesheets.

--- a/aviation-trivia.html
+++ b/aviation-trivia.html
@@ -10,18 +10,16 @@
         href="https://fonts.googleapis.com/css2?family=EB+Garamond:ital,wght@0,400..800;1,400..800&family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap"
         rel="stylesheet" />
     <title>Hypekingfish</title>
-    <link href="style.css" rel="stylesheet">
+    <link href="style.css" rel="stylesheet" />
     <link href="css/Extension's.css" rel="stylesheet" />
     <link href="css/Footer.css" rel="stylesheet" />
     <link href="css/Nav.css" rel="stylesheet" />
-    <link href="css/Scroll.css" rel="stylesheet" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" />
-    <link rel="icon" type="image/x-icon" href="/img/FnBLogo_FINAL_800.png">
+    <link rel="icon" type="image/x-icon" href="/img/FnBLogo_FINAL_800.png" />
     <script src="https://kit.fontawesome.com/f78443c527.js" crossorigin="anonymous"></script>
 </head>
 
 <body>
-    <button onclick="topFunction()" id="myBtn" title="Go to top"><i class="fas fa-arrow-up"></i><span class="ripple"></span></button>
     <div class="topnav">
         <a href="index.html" class="active"><img src="img/FnBLogo_FINAL_800.png" />Hypekingfish</a>
         <div id="myLinks">
@@ -34,41 +32,6 @@
             <i class="fa fa-bars"></i>
         </a>
     </div>
-    <section class="sb-extensions">
-        <h2 class="section-title">Streamer.bot Extensions</h2>
-        <div class="card-container">
-            <div class="extension-card">
-                <img src="" alt="Aviation Trivia" class="extension-icon" />
-                <h3>Aviation Trivia</h3>
-                <hr />
-                <p>Dive into </p>
-                <a href="aviation-trivia.html" class="card-button">Learn More</a>
-            </div>
-            <div class="extension-card">
-                <img src="" alt="" class="extension-icon" />
-                <h3></h3>
-                <hr />
-                <p></p>
-                <a href="#" class="card-button">Learn More</a>
-            </div>
-            <div class="extension-card">
-                <img src="" alt="Aviation Trivia" class="extension-icon" />
-                <h3></h3>
-                <hr />
-                <p></p>
-                <a href="" class="card-button">Learn More</a>
-            </div>
-            <div class="extension-card">
-                <img src="" alt="" class="extension-icon" />
-                <h3></h3>
-                <hr />
-                <p></p>
-                <a href="" class="card-button">Learn More</a>
-
-            </div>
-            <!-- Add more cards as needed -->
-        </div>
-    </section>
     <footer class="site-footer">
         <div class="footer-content">
             <div class="footer-branding">
@@ -127,7 +90,6 @@
         document.getElementById("year").textContent = new Date().getFullYear();
     </script>
     <script src="scripts/navmenu.js"></script>
-    <script src="scripts/scroll.js"></script>
 </body>
 
 </html>
