Enhance extension card content and layout; update trivia description for clarity and engagement; add additional extension card for future use.

--- a/sb-extension's.html
+++ b/sb-extension's.html
@@ -41,7 +41,8 @@
                 <img src="" alt="Aviation Trivia" class="extension-icon" />
                 <h3>Aviation Trivia</h3>
                 <hr />
-                <p>Dive into </p>
+                <p>Join the aviation trivia in chat — answer fast, earn points, and climb the leaderboard!
+Can you handle the skies? Let’s fly!</p>
                 <a href="aviation-trivia.html" class="card-button">Learn More</a>
             </div>
             <div class="extension-card">
@@ -52,7 +53,7 @@
                 <a href="#" class="card-button">Learn More</a>
             </div>
             <div class="extension-card">
-                <img src="" alt="Aviation Trivia" class="extension-icon" />
+                <img src="" alt="" class="extension-icon" />
                 <h3></h3>
                 <hr />
                 <p></p>
@@ -65,6 +66,13 @@
                 <p></p>
                 <a href="" class="card-button">Learn More</a>
 
+            </div>
+            <div class="extension-card">
+                <img src="" alt="" class="extension-icon" />
+                <h3></h3>
+                <hr />
+                <p></p>
+                <a href="" class="card-button">Learn More</a>
             </div>
             <!-- Add more cards as needed -->
         </div>
