Add local time display to navigation; enhance Twitch stream info section with improved styling and loading animations; implement time updater script.

--- a/streaming.html
+++ b/streaming.html
@@ -45,9 +45,9 @@
     </div>
   </div>
   <div id="stream-info">
-    <p><strong>Status:</strong> <span id="stream-status">Checking...</span></p>
-    <p><strong>Stream Title:</strong> <span id="stream-title">-</span></p>
-    <p><strong>Current Game:</strong> <span id="stream-game">-</span></p>
+    <p><strong>Status:</strong> <span id="stream-status"></span></p>
+    <p><strong>Title:</strong> <span id="stream-title"></span></p>
+    <p><strong>Game:</strong> <span id="stream-game"></span></p>
   </div>
 
   <div class="Player">
@@ -167,7 +167,7 @@
             This site is not affiliated with or endorsed by VATSIM or any official aviation authority.<br />
             Images and content may not be reproduced without permission.<br />
             For inquiries, contact: <a href="mailto:hypekingfishttv@gmail.com">hypekingfishttv@gmail.com</a><br />
-            Website code and design by Hypekingfish.<br />
+            Website coded and design by Hypekingfish.<br />
             Some images and data may be used under fair use for educational or informational purposes.<br />
             If you believe your copyright has been infringed, please contact me for prompt removal or credit.<br />
             No personal data is collected or stored by this site.<br />
