--- a/about.html
+++ b/about.html
@@ -31,6 +31,7 @@
         <a href="javascript:void(0);" class="topnav-icon" onclick="myFunction()">
             <i class="fa fa-bars"></i>
         </a>
+        <span id="local-time" class="time-display"></span>
     </div>
     <main>
         <section class="AHeader">
@@ -213,6 +214,7 @@
         </script>
     </main>
     <script src="scripts/navmenu.js"></script>
+    <script src="scripts/time.js"></script>
 </body>
 
 </html>
