Add refresh button to update stream info; update button styles in CSS and enhance stream title and game display with icons

--- a/streaming.html
+++ b/streaming.html
@@ -63,6 +63,7 @@
     <p><strong>Title:</strong> <span id="stream-title"></span></p>
     <p><strong>Game:</strong> <span id="stream-game"></span></p>
     <p><strong>Viewers:</strong> <span id="stream-viewers">...</span></p>
+    <button onclick="updateStreamInfo()">🔄 Refresh Data</button>
   </div>
 
   <div id="stream-tools">
