Update Twitch username in script and refine mobile warning message for clarity

--- a/streaming.html
+++ b/streaming.html
@@ -39,7 +39,7 @@
   <div id="mobile-warning">
     <div class="warning-box">
       <h2>📵 Mobile Streaming Not Available</h2>
-      <p>Due to Twitch embed limitations, the stream can't be viewed directly on mobile. Please <strong>open the Twitch
+      <p>Due to screen limitations, the stream can't be viewed directly on mobile. Please <strong>open the Twitch
           app</strong> or use a <strong>desktop browser</strong> to watch.</p>
       <a href="https://www.twitch.tv/hypekingfish" target="_blank" class="watch-btn">Watch on Twitch</a>
     </div>
