Refactor mobile warning styles and update streaming page links for improved clarity and accessibility

--- a/streaming.html
+++ b/streaming.html
@@ -9,14 +9,15 @@
   <link
     href="https://fonts.googleapis.com/css2?family=EB+Garamond:ital,wght@0,400..800;1,400..800&family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap"
     rel="stylesheet" />
-  <title>Hypekingfish</title>
-  <link href="style.css" rel="stylesheet">
+  <title>Hypekingfish - Streaming</title>
   <link href="css/Discord.css" rel="stylesheet" />
   <link href="css/Follows.css" rel="stylesheet" />
   <link href="css/Footer.css" rel="stylesheet" />
+  <link href="css/Mobile Message.css" rel="stylesheet" />
   <link href="css/Nav.css" rel="stylesheet" />
   <link href="css/Pricing.css" rel="stylesheet" />
   <link href="css/Scroll.css" rel="stylesheet" />
+  <link href="style.css" rel="stylesheet" />
   <link href="css/Twitch.css" rel="stylesheet" />
   <link rel="icon" type="image/x-icon" href="/img/FnBLogo_FINAL_800.png">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" />
@@ -43,7 +44,7 @@
       <h2>📵 Mobile Streaming Not Available</h2>
       <p>Due to screen limitations, the stream can't be viewed directly on mobile. Please <strong>open the Twitch
           app</strong> or use a <strong>desktop browser</strong> to watch.</p>
-      <a href="https://www.twitch.tv/hypekingfish" target="_blank" class="watch-btn">Watch on Twitch</a>
+      <a href="https://www.twitch.tv/hypekingfish" target="_blank" rel="noopener" class="watch-btn">Watch on Twitch</a>
     </div>
   </div>
   <div class="Player">
@@ -97,7 +98,7 @@
         <div class="tier-description">
           <ul>
             <li>All Bronze Perks</li>
-            <li>Discounted SB Extension's</li>
+            <li>10% Ko-Fi Discount</li>
           </ul>
         </div>
         <a class="join-btn" href="https://ko-fi.com/hypekingfish/tiers" target="_blank" rel="noopener">Join</a>
