Remove commented-out weather display code from METAR implementation

--- a/flying.html
+++ b/flying.html
@@ -69,7 +69,7 @@
       <div class="row"><span class="label">Wind:</span> <span id="wind"></span> <span id="wind-arrow">🡡</span></div>
       <div class="row"><span class="label">Visibility:</span> <span id="visibility"></span></div>
       <div class="row"><span class="label">Altimeter:</span> <span id="altimeter" title=""></span></div>
-      <div class="row"><span class="label">Weather:</span> <span id="weather"></span></div>
+      <!-- <div class="row"><span class="label">Weather:</span> <span id="weather"></span></div> -->
       <div class="row"><span class="label">Sky:</span> <span id="sky-conditions"></span></div>
       <div class="row"><span class="label">Observation Time:</span> <span id="obs-time"></span></div>
     </div>
