--- a/flying.html
+++ b/flying.html
@@ -38,25 +38,31 @@
   </div>
   <section class="seattle_artcc">
     <!-- <h2><img src="https://zseartcc.org/public/images/seattle_pics/Seattle_edit.png" class="rainbow-box">Seattle ARTCC Overview</h2> -->
-    <p>
-      Welcome to my Seattle ARTCC experience! Here, you’ll find insights into
-      my air traffic control sessions, real-time VATSIM data, and traffic
-      trends at major ZSE airports.
-    </p>
-    <div class="zse-info">
-      <ul>
-        <!-- <p><strong>Last Controlled Field:</strong> <span id="">Loading...</span><p> -->
-        <p>
-          <strong>Total Vatsim Hours:</strong>
-          <span id="vatsim-hours">Loading...</span>
-        </p>
-        <li><strong>Favorite Airport:</strong> KPDX (Portland Intl)</li>
-      </ul>
+    <div id="vatsim-stats">
+      <h2>my VATSIM Stats</h2>
+      <div class="stats-container">
+        <div class="stat-item">
+          <h3>Total Pilot Hours</h3>
+          <p id="pilot-hours">Loading...</p>
+        </div>
+        <div class="stat-item">
+          <h3>Total Controller Hours</h3>
+          <p id="controller-hours">Loading...</p>
+        </div>
+        <div class="stat-item">
+          <h3>Controller Ratings</h3>
+          <ul class="ratings-list">
+            <li>S1 - Ground Controller: <span id="s1-hours">Loading...</span> hours</li>
+            <li>S2 - Tower Controller: <span id="s2-hours">Loading...</span> hours</li>
+            <li>S3 - Approach Controller: <span id="s3-hours">Loading...</span> hours</li>
+          </ul>
+        </div>
+      </div>
     </div>
 
 
     <div id="flight-summary-banner"></div>
-
+        <div id="metar-ticker"><span id="metar-ticker-text"></span></div>
     <div id="metar-container" class="fade-in">
       <div class="row"><span class="label">Station:</span> <span id="airport-code"></span>
         <a id="map-link" target="_blank">🌍 SkyVector</a>
@@ -66,15 +72,13 @@
       <div class="row"><span class="label">Temperature:</span> <span id="temperature"></span></div>
       <div class="row"><span class="label">Dewpoint:</span> <span id="dewpoint"></span></div>
       <div class="row"><span class="label">Humidity:</span> <span id="humidity"></span></div>
-      <div class="row"><span class="label">Wind:</span> <span id="wind"></span> <span id="wind-arrow">🡡</span></div>
+      <div class="row"><span class="label">Wind:</span> <span id="wind"></span> <span id="wind-arrow">&#x2191;</span></div>
       <div class="row"><span class="label">Visibility:</span> <span id="visibility"></span></div>
       <div class="row"><span class="label">Altimeter:</span> <span id="altimeter" title=""></span></div>
       <!-- <div class="row"><span class="label">Weather:</span> <span id="weather"></span></div> -->
       <div class="row"><span class="label">Sky:</span> <span id="sky-conditions"></span></div>
       <div class="row"><span class="label">Observation Time:</span> <span id="obs-time"></span></div>
     </div>
-
-    <div id="metar-ticker"><span id="metar-ticker-text"></span></div>
     <div class="flight-container">
       <div class="airport-label left">PDX (Portland Intl)</div>
       <div class="flight-path">
@@ -146,7 +150,7 @@
     </div>
 
     <!-- Live Controller Stats Section -->
-    <div id="vatsim-stats" class="vatsim-text">
+    <!-- <div id="vatsim-stats" class="vatsim-text">
       <div class="controller-section">
         <h2>Controller Ratings & Achievements</h2>
         <ul class="certifications">
@@ -168,7 +172,7 @@
           <span class="hours" id="controller-hours">Loading...</span>
         </h3>
       </div>
-    </div>
+    </div> -->
     <div class="testimonials">
       <h2>VATSIM Controller Reviews</h2>
       <div class="testimonial">
