Add total VATSIM hours display in flying.html and style in Controller.css

--- a/flying.html
+++ b/flying.html
@@ -57,6 +57,10 @@
             <li>S3 - Approach Controller: <span id="s3-hours">Loading...</span> hours</li>
           </ul>
         </div>
+        <div class="stat-item-hours">
+          <h3>Total Vatsim Hours</h3>
+          <p id="vatsim-hours">Loading...</p>
+        </div>
       </div>
     </div>
 
