Update footer support button styling and fix wording in copyright notice; add fetch import in VATSIM member data function

--- a/about.html
+++ b/about.html
@@ -185,7 +185,7 @@
                 <div class="footer-support">
                     <h4>Support the Site</h4>
                     <a href="https://www.buymeacoffee.com/Hypekingfish"><img
-                            src="https://img.buymeacoffee.com/button-api/?text=Buy me a coffee&emoji=&slug=Hypekingfish&button_colour=FFDD00&font_colour=000000&font_family=Cookie&outline_colour=000000&coffee_colour=ffffff" /></a>
+                            src="https://img.buymeacoffee.com/button-api/?text=Buy me a coffee&emoji=&slug=Hypekingfish&button_colour=ffc425&font_colour=000000&font_family=Poppins&outline_colour=000000&coffee_colour=FFDD00" /></a>
                 </div>
                 <p class="footer-copyright">
                     <small>
@@ -196,7 +196,7 @@
                         Images and content may not be reproduced without permission.<br />
                         For inquiries, contact: <a
                             href="mailto:hypekingfishttv@gmail.com">hypekingfishttv@gmail.com</a><br />
-                        Website code and design by Hypekingfish.<br />
+                        Website coded and designed by Hypekingfish.<br />
                         Some images and data may be used under fair use for educational or informational purposes.<br />
                         If you believe your copyright has been infringed, please contact me for prompt removal or
                         credit.<br />
