--- a/flying.html
+++ b/flying.html
@@ -40,19 +40,7 @@
     <!-- <h2><img src="https://zseartcc.org/public/images/seattle_pics/Seattle_edit.png" class="rainbow-box">Seattle ARTCC Overview</h2> -->
     <div id="vatsim-stats">
       <h2>my VATSIM Stats</h2>
-      <div class="haze"></div>
       <div class="static-line"></div>
-
-      <!-- radar blips -->
-      <div class="blip b1"></div>
-      <div class="blip b2"></div>
-      <div class="blip b3"></div>
-
-      <!-- perimeter lights -->
-      <div class="perimeter-light p1"></div>
-      <div class="perimeter-light p2"></div>
-      <div class="perimeter-light p3"></div>
-      <div class="perimeter-light p4"></div>
       <div class="stats-container">
         <div class="stat-item">
           <h3>Total Pilot Hours</h3>
@@ -308,12 +296,12 @@
   <script>
     document.getElementById("year").textContent = new Date().getFullYear();
   </script>
-  <script src="scripts/atc.js"></script>
+  <!-- <script src="scripts/atc.js"></script> -->
   <script src="scripts/lightbox.js"></script>
   <script src="scripts/carousel.js"></script>
-  <script src="scripts/combined.js"></script>
-  <script src="scripts/controlling.js"></script>
-  <script src="scripts/pilot.js"></script>
+  <!-- <script src="scripts/combined.js"></script>
+  <script src="scripts/controlling.js"></script> -->
+  <!-- <script src="scripts/pilot.js"></script> -->
   <script src="scripts/plane.js"></script>
   <script src="scripts/Metar.js"></script>
   <script src="scripts/Modal.js"></script>
