Uncomment script imports for atc.js, combined.js, controlling.js, and pilot.js in flying.html

--- a/flying.html
+++ b/flying.html
@@ -296,12 +296,12 @@
   <script>
     document.getElementById("year").textContent = new Date().getFullYear();
   </script>
-  <!-- <script src="scripts/atc.js"></script> -->
+  <script src="scripts/atc.js"></script>
   <script src="scripts/lightbox.js"></script>
   <script src="scripts/carousel.js"></script>
-  <!-- <script src="scripts/combined.js"></script>
-  <script src="scripts/controlling.js"></script> -->
-  <!-- <script src="scripts/pilot.js"></script> -->
+  <script src="scripts/combined.js"></script>
+  <script src="scripts/controlling.js"></script>
+  <script src="scripts/pilot.js"></script>
   <script src="scripts/plane.js"></script>
   <script src="scripts/Metar.js"></script>
   <script src="scripts/Modal.js"></script>
