Add Testimonials section with styling and star rating functionality

--- a/flying.html
+++ b/flying.html
@@ -17,6 +17,7 @@
   <link href="css/Metar.css" rel="stylesheet" />
   <link href="css/Nav.css" rel="stylesheet" />
   <link href="css/Plane.css" rel="stylesheet" />
+  <link href="css/Testimonials.css" rel="stylesheet" />
   <!-- <link href="css/Plane-Image.css" rel="stylesheet" /> -->
   <link rel="icon" type="image/x-icon" href="/img/FnBLogo_FINAL_800.png" />
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" />
@@ -239,9 +240,6 @@
         </figure>
       </div>
     </div>
-    <h3 class="">
-      Total Pilot Hours: <span id="pilot-hours">Loading...</span>
-    </h3>
   </section>
   <footer class="site-footer">
     <div class="footer-content">
