Implement code changes to enhance functionality and improve performance

--- a/flying.html
+++ b/flying.html
@@ -25,6 +25,7 @@
 </head>
 
 <body>
+  <button id="darkModeBtn">🌙 Toggle Dark Mode</button>
   <div class="topnav">
     <a href="index.html" class="active"><img src="img/FnBLogo_FINAL_800.png" />Hypekingfish</a>
     <div id="myLinks">
@@ -299,6 +300,7 @@
   <script src="scripts/carousel.js"></script>
   <script src="scripts/combined.js"></script>
   <script src="scripts/controlling.js"></script>
+  <script src="scripts/darkmode.js"></script>
   <script src="scripts/pilot.js"></script>
   <script src="scripts/plane.js"></script>
   <script src="scripts/Metar.js"></script>
